--- a/locales/ru.json
+++ b/locales/ru.json
@@ -4,7 +4,7 @@
 
   "menu_activate_trial_button": "🆓 Пробный период",
   "menu_subscribe_inline": "🚀 Купить",
-  "menu_my_subscription_inline": "🔐 Моя подписка",
+  "menu_my_subscription_inline": "🔐 Мои подписки",
   "menu_referral_inline": "🎁 Рефералы",
   "menu_apply_promo_button": "🎟 Промокод",
   "menu_language_settings_inline": "🌐 Язык",
@@ -54,6 +54,7 @@
   "traffic_unlimited": "Безлимитный",
   "traffic_na": "н/д",
   "error_service_unavailable": "Сервис временно недоступен. Пожалуйста, попробуйте позже.",
+  "active_subscriptions": "Ваши активные подписки",
 
   "promo_code_prompt": "Пожалуйста, введите ваш промокод:",
   "promo_code_not_found": "Промокод <code>{code}</code> не найден, истек или уже использован максимальное количество раз.",
